# ContainerFS

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: data.c  data.h  dir_tree.c  dir_tree.h  fzip.c  fzip.h  getattr.c  init.c  main.c  open.c  read.c  readdir.c  readdir.h  readlink.c  release.c  utility.c  utility.h
tests/: deep_zip.py  idle_read.py
